some fixes and up load data

--- a/ClientAG/src/app/managerComponents/files/download-files/download-files.component.html
+++ b/ClientAG/src/app/managerComponents/files/download-files/download-files.component.html
@@ -32,5 +32,6 @@
         <mat-icon class="clearIcon" (click)="deletFile(fileName)">clear</mat-icon>
       </div>
       <p>{{filesNames[i+2]}}</p>
-    </button> </div>
+    </button> 
+  </div>
 </div>
